--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,8 @@ Page Content
 
 #home-main-content main {
     text-shadow: 1px 1px 4px rgb(197, 197, 197);
+    width: 725px;
+    margin: 20px auto;
 }
 
 #article-main-content main {
