--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,9 @@ aside h2 {
 
     text-shadow: 1px 1px 4px rgb(182, 182, 182);
 }
+main p {
+    margin-bottom: 10px;
+}
 
 
 /* ===================================
