--- a/css/layout.css
+++ b/css/layout.css
@@ -45,17 +45,19 @@ header {
     /* Centers the contained side-by-side elements */
     display: flex;
     justify-content: center;
+    padding: 20px auto;
 }
 
 #top-banner-logo {
     /* Pushes element halfway to the left */
     float: left;
 
-    border-radius: 50%;
+/*     border-radius: 50%; */
+    width: 150px;
+    padding: 10px;
 
     /* Creates space from top and bottom edges of the banner */
-    margin-top: 4px;
-    margin-bottom: 4px; 
+    
 }
 
 #website-titles {
@@ -63,13 +65,13 @@ header {
     float: left;
 
     /* Creates space from top and bottom edges of the banner */
-    margin-top: 25px;
+    margin-top: 30px;
     margin-left: 15px;
 }
 
 #subtitle {
     /* Creates space from above title */
-    margin-top: 9px;
+    margin-top: 5px;
 }
 
 
