--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,8 @@ Page Content
 
 #page-main-image {
 /*     border: 1px solid rgb(20, 20, 20); */
-    margin-bottom: 20px;
-    margin-top: -1px;
+    margin: 20px;
+/*     margin-top: -1px; */
 
     -moz-box-shadow: 0 0 10px rgb(129, 129, 129);
     -webkit-box-shadow: 0 0 10px rgb(129, 129, 129);
