--- a/css/layout.css
+++ b/css/layout.css
@@ -160,10 +160,10 @@ nav li {
     text-align: center;
 
     /* Creates circular border */
-    border-radius: 50%;
+    border-radius: 80%;
     padding: 5px;
 
-    width: 110px;  
+    width: 120px;  
     height:110px;  
     margin: 25px;
     margin-top: -1px;
@@ -174,11 +174,11 @@ nav a {
 
     /* Gives the anchor a rounded shape, matching the above circular border */
     display: inline-block;
-    width: 110px;
-    height: 110px;
+/*     width: 110px;
+    height: 110px; */
     margin: -25px;
     line-height: 106px;
-    border-radius: 50%;
+/*     border-radius: 50%; */
 }
 
 #site-info {
