--- a/css/layout.css
+++ b/css/layout.css
@@ -174,8 +174,8 @@ nav a {
 
     /* Gives the anchor a rounded shape, matching the above circular border */
     display: inline-block;
-/*     width: 110px;
-    height: 110px; */
+    width: 120px;
+    height: 110px;
     margin: -25px;
     line-height: 106px;
 /*     border-radius: 50%; */
