--- a/css/styles.css
+++ b/css/styles.css
@@ -161,14 +161,17 @@ nav li {
 }
 
 nav a {
-    border: 1px solid black;
-    color: black;
+/*     border: 1px solid black; */
+    
+/*     color: black; */
+    color: #fff;
     
     text-shadow: 1px 1px 4px rgb(182, 182, 182);
 }
 
 nav a:hover {
-    background-color: rgb(218, 218, 218);
+/*     background-color: rgb(218, 218, 218); */
+    backgroud-color: #000;
 }
 
 nav a:active {
