--- a/css/layout.css
+++ b/css/layout.css
@@ -129,6 +129,7 @@ aside {
     /* Creates space from above section */
 /*     margin-top: 2%; */
     margin-top: 4%;
+    margin-bottom: 4%;
 
 /*     padding: 1%; */
     padding: 3.5%;
