--- a/css/layout.css
+++ b/css/layout.css
@@ -132,7 +132,10 @@ aside {
     margin-bottom: 4%;
 
 /*     padding: 1%; */
-    padding: 2% 3.5%;
+    padding: 2.5% 3.5%;
+}
+aside h3 {
+    text-align: center;
 }
 
 #author-image {
