--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,8 @@ main {
 }
 
 aside {
-    background-color: rgb(199, 199, 199);
+/*     background-color: rgb(199, 199, 199); */
+    background-color: rgb(240, 240, 240);
 /*     border: 1px solid rgb(20, 20, 20); */
     border-radius: 10px;
 
@@ -131,7 +132,7 @@ aside {
     border: 1px solid rgb(20, 20, 20);
 }
 
-aside h2 {
+aside h3 {
     text-align: center;
     padding: 10px;
 
