--- a/css/layout.css
+++ b/css/layout.css
@@ -139,6 +139,14 @@ aside h3 {
     padding: 10px;
 }
 
+h3 {
+    padding-bottom: 10px;
+}
+
+p {
+    margin-bottom: 20px;
+}
+
 #author-image {
     border-radius: 50%;
 }
