--- a/css/layout.css
+++ b/css/layout.css
@@ -114,7 +114,11 @@ Page Content
 }
 
 .list-of-stuff {
-    padding-left: 4%;
+    padding-left: 6%;
+}
+
+.list-of-stuff li {
+    padding-bottom: 1.5%;
 }
 
 #credits-main-content main {
