--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ Page Content
     box-shadow: 0 0 10px rgb(129, 129, 129);
 }
 
-.team_pic {
+img.team_pic {
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
     box-shadow: none;
