--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,18 @@ header {
     color: rgb(231, 231, 231);
     text-shadow: 1px 1px 4px rgb(47, 47, 47);
 }
-
+nav {
+    background: #000;
+}
+nav a {
+    color: #f1f3f8;
+    text-decoration: none;
+}
+nav a:hover {
+    background: #8d93ab;
+    display: block;
+/*    anchor tag is an inline element, so has to display block*/
+}
 
 /* ===================================
 Page Content
