--- a/css/layout.css
+++ b/css/layout.css
@@ -74,15 +74,15 @@ header {
     margin-top: 5px;
 }
 
-nav {
+.menu {
     height: 50px;
     line-height: 50px;
 }
-nav ul {
+.menu ul {
     width: 1200px;
     margin: 0 auto;
 }
-nav li {
+.menu li {
     float: left;
     list-style-type: none;
     text-align: center;
