--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ header {
 }
 .menu {
     background: #000;
+    
 }
 .menu a {
     color: #f1f3f8;
@@ -87,7 +88,7 @@ header {
 }
 .menu a:hover {
     background: #8d93ab;
-    display: block;
+/*     display: block; */
 /*    anchor tag is an inline element, so has to display block*/
 }
 
