--- a/css/layout.css
+++ b/css/layout.css
@@ -79,6 +79,8 @@ header {
     line-height: 50px;
     clear: both;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
 }
 .menu ul {
     width: 1100px;
@@ -87,8 +89,8 @@ header {
 .menu li {
     float: left;
     list-style-type: none;
-    text-align: center;
-    width: 14.28%;
+/*     text-align: center; */
+/*     width: 14.28%; */
     
 }
 
