--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ header {
 }
 .menu a:hover {
     background: #8d93ab;
-/*     display: block; */
+    display: block;
 /*    anchor tag is an inline element, so has to display block*/
 }
 
