--- a/css/layout.css
+++ b/css/layout.css
@@ -90,7 +90,7 @@ header {
     float: left;
     list-style-type: none;
     text-align: center;
-/*     width: 14.28%; */
+    width: 14.28%;
     
 }
 
