--- a/css/layout.css
+++ b/css/layout.css
@@ -79,8 +79,8 @@ header {
     line-height: 50px;
     clear: both;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
+/*     display: flex;
+    justify-content: space-around; */
 }
 .menu ul {
     width: 1100px;
