--- a/css/styles.css
+++ b/css/styles.css
@@ -83,10 +83,11 @@ header {
     
 }
 .menu a {
-    color: #000;
+    color: #fff;
     text-decoration: none;
 }
 .menu a:hover {
+    color: #000;
     background: rgb(255, 255, 255);
     display: block;
 /*    anchor tag is an inline element, so has to display block*/
