--- a/css/styles.css
+++ b/css/styles.css
@@ -179,21 +179,22 @@ nav {
 }
 
 nav li {
-
+    background-color: rgb(26, 26, 26);
 }
 
 nav a {
-    border: 1px solid black;
-    
-    color: black;
+/*     border: 1px solid black; */
+    color: rgb(231, 231, 231);
+/*     color: black; */
 
     
     text-shadow: 1px 1px 4px rgb(182, 182, 182);
 }
 
 nav a:hover {
-    background-color: rgb(218, 218, 218);
-/*     background-image: url('images/cocoa_120x110.png'); */
+    border: 1px solid black;
+    background-color: rgb(231, 231, 231);
+/*     background-color: rgb(218, 218, 218); */
 }
 
 nav a:active {
