--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,7 @@ nav a {
 nav a:hover {
     border: 1px solid black;
     background-color: rgb(231, 231, 231);
+    color: rgb(26, 26, 26);
 /*     background-color: rgb(218, 218, 218); */
 }
 
