--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ nav a:active {
 
 #site-info a:hover {
 /*     color: rgb(75, 75, 75); */
-    rgb(180, 180, 180);
+    color: rgb(180, 180, 180);
 }
 
 #site-info a:visited {
